- "foreign" command: enable the --send-data option for Octave, in
  which case the gretl dataset is pre-loaded as a matrix named
  "gretldata"
- "coint2" (Johansen test): print the log-likelihood, plus improve the
  printing of the Pi matrix when exogenous regressors are present
- VARs: add $fevd accessor to get the forecast error variance
  decomposition as a matrix
- "tobit" command: add options to specify left- and/or right-
  censoring; also add --robust option
- GUI forecast dialog, for cross-sectional data: give option of showing
  confidence interval for mean Y rather than actual Y
- Fix a small memory leak when opening an *.asc data file
- New function colname(): retrieve a column name from a matrix
- New model accessors with string values: $depvar for the name of the
  dependent variable, and $command for the command word used
- Matrix "division": give the operators "\" and "/" the same semantics
  as in Octave/Matlab (left and right division)
- Remove the FGLS "arch" command from the GUI and add a deprecating
  note to its help text
- Lag specification for regressors (e.g. "foo(-1 to -2)"): the name of
  a list can now be substituted for the name of a series
- quantile() function: allow a vector for the second argument when the 
  first argument is a matrix
- Fix bug: wrong out-of-sample forecasts for ARMA models with seasonal
  MA terms
- Fix bug: wrong handling of string fields in ODBC data import
- Fix bug: spurious "unmatched 'if'" error under some conditions
- Fix bug: incorrect handling of observation markers in context of
  scatter plot "with factor separation"
- Fix bug: transposition not being done in expressions of the form
  matrix m = $accessor[range]', with trailing transpose symbol

2011-02-24 version 1.9.4
- Change the default random number generator from GLib's 
  implementation of the Mersenne Twister to the SIMD-oriented Fast 
  Mersenne Twister
- Introduce "addons": approved function packages that are represented
  in the GUI menus